--- a/Homework0.ipynb
+++ b/Homework0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDnq7hPGRx1yJaknzkU4gB",
+      "authorship_tag": "ABX9TyNN2IGaPZw3Pvs3vR4PJopL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,12 +66,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('https://raw.githubusercontent.com/fivethirtyeight/guns-data/master/interactive_data.csv')"
+        "df = pd.read_csv('https://raw.githubusercontent.com/fivethirtyeight/guns-data/master/full_data.csv')"
       ],
       "metadata": {
         "id": "z9Pp5xNGzj_G"
       },
-      "execution_count": 182,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -84,51 +84,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mL6tt8UN1lCl",
-        "outputId": "03962f14-ea72-496a-87d3-0d4c3e309e10"
+        "outputId": "e8d00f22-a65e-46a1-a7a9-8bed088ba082"
       },
-      "execution_count": 183,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Unnamed: 0    [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...\n",
-            "Intent        [None selected, Suicide, Homicide, Accident, U...\n",
-            "Gender                            [None selected, Female, Male]\n",
-            "Age           [None selected, Under 15, 15 - 34, 35 - 64, 65...\n",
-            "Race          [None selected, White, Black, Hispanic, Asian/...\n",
-            "Deaths        [33599, 22079, 7765, 3007, 442, 306, 427, 242,...\n",
-            "Population    [316299978, 197369634, 38896382, 54049078, 163...\n",
-            "Rate          [10.6, 11.2, 20.0, 5.6, 2.7, 3.2, 0.7, 0.8, 1....\n",
+            "year                                         [2012, 2013, 2014]\n",
+            "month                   [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "intent        [Suicide, Undetermined, Accidental, Homicide, ...\n",
+            "police                                                   [0, 1]\n",
+            "sex                                                      [M, F]\n",
+            "age           [34.0, 21.0, 60.0, 64.0, 31.0, 17.0, 48.0, 41....\n",
+            "race          [Asian/Pacific Islander, White, Native America...\n",
+            "hispanic      [100, 998, 281, 211, 261, 210, 222, 282, 260, ...\n",
+            "place         [Home, Street, Other specified, nan, Other uns...\n",
+            "education        [BA+, Some college, HS/GED, Less than HS, nan]\n",
             "dtype: object\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(df['Intent'].unique())\n",
-        "print(df['Age'].unique())\n",
-        "print(df['Race'].unique())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "al3cM2nt2cms",
-        "outputId": "0ea4ed69-f701-4223-933a-06655ccad6d6"
-      },
-      "execution_count": 184,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['None selected' 'Suicide' 'Homicide' 'Accident' 'Unknown']\n",
-            "['None selected' 'Under 15' '15 - 34' '35 - 64' '65+' '5']\n",
-            "['None selected' 'White' 'Black' 'Hispanic' 'Asian/Pacific Islander'\n",
-            " 'Other']\n"
           ]
         }
       ]
@@ -142,7 +117,7 @@
       "metadata": {
         "id": "SZd3xNc087if"
       },
-      "execution_count": 194,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -165,20 +140,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VHBB6zjuR_ck",
-        "outputId": "cd2e7978-17ab-45cd-9429-d6f2ce8f1391"
+        "outputId": "190c5ef7-8c00-4154-c491-c2be86c6a38c"
       },
-      "execution_count": 167,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['None selected', 'Female', '35 - 64', 'Black', 270, 7932606, 3.4],\n",
-              "      dtype=object)"
+              "array([2012, 7, 'Accidental', 0, 'M', 12.0, 'Black', 100, 'Home',\n",
+              "       'Less than HS'], dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 167
+          "execution_count": 9
         }
       ]
     },
@@ -189,14 +164,14 @@
         "def suicide():\n",
         "  result = 0\n",
         "  for i in range(data.shape[0]):\n",
-        "    if data[i, 0] == 'Suicide' : \n",
-        "        result += data[i,4]\n",
-        "  return result/np.sum(data[:,4]) "
+        "    if data[i, 2] == 'Suicide' : \n",
+        "        result += 1\n",
+        "  return result/data.shape[0]"
       ],
       "metadata": {
         "id": "iUvp_DTe1q_Z"
       },
-      "execution_count": 119,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -205,10 +180,25 @@
         "suicide()"
       ],
       "metadata": {
-        "id": "U3xp1QzZRh1q"
+        "id": "U3xp1QzZRh1q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad0471e7-b4ed-434c-cec3-9935fde12238"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6267485465981468"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -217,15 +207,14 @@
         "def suicide_male():\n",
         "  result = 0 \n",
         "  for i in range(data.shape[0]):\n",
-        "    if data[i,0] == 'Suicide':\n",
-        "      if data[i, 1] == 'Male':\n",
-        "        result += data[i,4]\n",
-        "  return result/np.sum(data[:,4])*100"
+        "    if data[i,2] == 'Suicide'and data[i, 4] == 'M':\n",
+        "        result += 1\n",
+        "  return result/data.shape[0]*100"
       ],
       "metadata": {
         "id": "EbQ-1rxNEc4I"
       },
-      "execution_count": 144,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -238,19 +227,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iRKyBd_5RxSZ",
-        "outputId": "ccad4db5-946f-4aa6-a858-17a6d74898b7"
+        "outputId": "23e9d33e-8e2c-4f5a-d598-ab430afd8455"
       },
-      "execution_count": 145,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "13.51352356858514"
+              "54.05464394134805"
             ]
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 65
         }
       ]
     },
@@ -261,14 +250,14 @@
         "def homicide():\n",
         "  result = 0 \n",
         "  for i in range(data.shape[0]):\n",
-        "    if data[i,0] == 'Homicide':\n",
-        "        result += data[i,4]\n",
-        "  return result/np.sum(data[:,4])"
+        "    if data[i,2] == 'Homicide':\n",
+        "        result += 1\n",
+        "  return result/data.shape[0]"
       ],
       "metadata": {
         "id": "CPRKATEJAYTB"
       },
-      "execution_count": 153,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -281,19 +270,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tBgNmiPgCMqy",
-        "outputId": "e2967c96-61c9-4355-e9ed-b1f26968392d"
+        "outputId": "2ef5bebc-2991-4964-f329-f4f967fc5a25"
       },
-      "execution_count": 155,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.17450053945459282"
+              "0.34897517807893014"
             ]
           },
           "metadata": {},
-          "execution_count": 155
+          "execution_count": 26
         }
       ]
     },
@@ -301,46 +290,45 @@
       "cell_type": "code",
       "source": [
         "#Around two-thirds of homicide victims who are males in the age-group of 15--34 are black\n",
-        "def suicide_male():\n",
+        "def homicide_black():\n",
         "  black = 0 \n",
         "  total = 0 \n",
         "  for i in range(data.shape[0]):\n",
-        "    if data[i,0] == 'Homicide':\n",
-        "      if data[i, 1] == 'Male' and data[i, 2] == '15 - 34' :\n",
-        "        if data[i, 3] == 'Black' :\n",
-        "          black += data[i,4]\n",
-        "        total += data[i,4]\n",
+        "    if data[i,2] == 'Homicide' and data[i, 4] == 'M' and data[i, 5] > 15.0 and data[i, 5] < 34.0 :\n",
+        "      if data[i, 6] == 'Black' :\n",
+        "        black += 1\n",
+        "      total += 1\n",
         "  return black/total"
       ],
       "metadata": {
         "id": "0kE6N4FFSYj-"
       },
-      "execution_count": 162,
+      "execution_count": 56,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "suicide_male()"
+        "homicide_black()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "il2oe7C5S970",
-        "outputId": "1e0eabc5-aafe-4575-ae50-aec0a0b05d8f"
+        "outputId": "44f2aefd-191f-443b-a41f-15ba9bd70b73"
       },
-      "execution_count": 163,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.33064949006977995"
+              "0.6641558162057463"
             ]
           },
           "metadata": {},
-          "execution_count": 163
+          "execution_count": 57
         }
       ]
     },
@@ -352,16 +340,16 @@
         "  female = 0\n",
         "  total = 0 \n",
         "  for i in range(data.shape[0]):\n",
-        "    if data[i,0] == 'Homicide':\n",
-        "      if data[i, 1] == 'Female' :\n",
-        "          female += data[i,4]\n",
-        "      total += data[i,4]\n",
+        "    if data[i,2] == 'Homicide':\n",
+        "      if data[i, 4] == 'F' :\n",
+        "          female += 1\n",
+        "      total += 1\n",
         "  return female/total*100"
       ],
       "metadata": {
         "id": "sjN1OIrnS_S3"
       },
-      "execution_count": 164,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -374,19 +362,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "039mkNxkThu5",
-        "outputId": "4083fac2-6ef2-4481-a91b-4d568a848160"
+        "outputId": "b1efbe49-4339-4381-d438-3ab2a429ee7c"
       },
-      "execution_count": 165,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7.640073341292854"
+              "15.274619058448943"
             ]
           },
           "metadata": {},
-          "execution_count": 165
+          "execution_count": 59
         }
       ]
     },
